RESOLVED FIXED217882
REGRESSION (r191637): Fix -Wmisleading-indentation warnings in open source clang
https://bugs.webkit.org/show_bug.cgi?id=217882
Summary REGRESSION (r191637): Fix -Wmisleading-indentation warnings in open source clang
David Kilzer (:ddkilzer)
Reported 2020-10-17 15:52:06 PDT
Fix -Wmisleading-indentation warnings in open source clang. This code was committed for Bug 150174 in r191637.
Attachments
Patch v1 (2.28 KB, patch)
2020-10-17 15:54 PDT, David Kilzer (:ddkilzer)
no flags
Radar WebKit Bug Importer
Comment 1 2020-10-17 15:52:17 PDT
David Kilzer (:ddkilzer)
Comment 2 2020-10-17 15:54:24 PDT
Created attachment 411682 [details] Patch v1
Tim Horton
Comment 3 2020-10-17 16:02:36 PDT
Comment on attachment 411682 [details] Patch v1 Neat.
EWS
Comment 4 2020-10-17 16:43:21 PDT
Committed r268649: <https://trac.webkit.org/changeset/268649> All reviewed patches have been landed. Closing bug and clearing flags on attachment 411682 [details].
Note You need to log in before you can comment on or make changes to this bug.