REGRESSION (r191637): Fix -Wmisleading-indentation warnings in open source clang <https://webkit.org/b/217882>

Reviewed by Tim Horton.

* UIProcess/Cocoa/WebViewImpl.mm:
(WebKit::WebViewImpl::accessibilityAttributeValue):
- Fix indentation of source to match what it is doing.


Canonical link: https://commits.webkit.org/230607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268649 268f45cc-cd09-0410-ab3c-d52691b4dbfc